# pop3-v2-server

./: .dockerignore  .env  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  emails.json
client/: client.cpp  client.h  clinet.cpp  clinet.h  main.cpp  state.h  utils.cpp  utils.h
client/include/: account.h  client.h  utils.h
client/services/: tcp.cpp  tcp.h
client/src/: client.cpp  main.cpp  utils.cpp
client/state/: account.cpp  account.h  db.h  dbConnection.h  mail.cpp  table.h
common/: console.h  protocol.cpp  protocol.h  utils.cpp  utils.h
common/protocol/: pop3-v2.cpp  pop3-v2.h  tcp-base.cpp  tcp-base.h  tcp.cpp  tcp.h
config/: buffer.h  config.h  host.h  port.h  protocol.h  tcp.h
database/: POP3V2.db  POP3V2.db-shm  POP3V2.db-wal
docs/: directory-structure.txt
lib/include/: cli.h  console.h  serverconfig.h  session.h  socket.h  tcpserver.h  tcpserversocket.h  tcpsocket.h  utils.h
lib/src/: cli.cpp  serverconfig.cpp  tcpserver.cpp  tcpserversocket.cpp  tcpsocket.cpp  utils.cpp
server/: main.cpp  server.cpp  server.h  server.hpp  service-manager.cpp  service-manager.h  session-manager.cpp  session-manager.h  session-manager.hpp  session.cpp  session.hpp  utils.cpp  utils.h
server/include/: db.h  dbConnection.h  index.h  mail.h  pop3-v2-server-config.h  pop3-v2-server.h  pop3-v2-session.h  pop3-v2.h  server-cli.h  server.h  service-manager.h  table.h  user.h  utils.h
server/services/: pop3-v2.cpp  pop3-v2.h  tcp.cpp  tcp.h
server/src/: main.cpp  server-cli.cpp  server.cpp  utils.cpp
server/src/services/: pop3-v2-server-config.cpp  pop3-v2-server.cpp  pop3-v2-session.cpp  pop3-v2.cpp  tcp.cpp
server/src/storage/: db.cpp  dbConnection.cpp  mail.cpp  table.cpp  user.cpp
server/storage/: db.h  dbConnection.h  db_test.cpp  mail.cpp  mail.h  table.h  user.cpp  user.h
types/: api.h  auth.h  clientInput.h  color.h  db.h  request.h  response.h  services.h  session.h  state.h
